--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vs-experiment-2",
+  "name": "webpack-boilerplate",
   "version": "1.0.0",
   "author": "William Dunlop",
   "description": "",
@@ -9,21 +9,21 @@
     "css-loader": "^1.0.0",
     "express": "^4.16.3",
     "jsx-render": "^0.6.6",
-    "node-sass": "^4.9.2",
+    "node-sass": "^4.11.0",
     "npm-run-all": "^4.1.3",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
+    "@babel/core": "^7.3.3",
     "@babel/plugin-syntax-jsx": "^7.0.0",
     "@babel/plugin-transform-react-jsx": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-env": "^7.3.1",
     "babel-loader": "^8.0.1",
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.5.0",
-    "webpack-cli": "^2.0.14",
-    "webpack-dev-server": "^3.1.3"
+    "webpack-cli": "^3.2.3",
+    "webpack-dev-server": "^3.2.0"
   },
   "scripts": {
     "build": "npm run build-js && npm run build-css && cp -r ./src/_static/* ./build/",
